[package]
name = "tokio-diesel"
version = "0.3.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"
description = "Integrate Diesel into Tokio cleanly and efficiently."
repository = "https://github.com/mehcode/tokio-diesel"
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]

[dependencies]
async-trait = "0.1.33"
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "b4c57c2247875c", default-features = false, features = [ "r2d2" ] }
futures = { version = "0.3.5", default-features = false }
r2d2 = "0.8.8"
tokio = { version = ">=0.2.21", default-features = false, features = [ "blocking", "rt-threaded" ] }

[dev-dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "b4c57c2247875c", default-features = false, features = [ "postgres", "extras" ] }
uuid = { version = "0.8.1", features = [ "v4" ] }
tokio = { version = ">=0.2.21", default-features = false, features = [ "full" ] }
